[tool.poetry]
name = "three_in_a_row"
version = "0.1.0"
description = ""
authors = ["fidanze <fidanze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"